# ds2025

./: .gitignore  README.md
Midterm/: Makefile  README.md  pyproject.toml
Midterm/.configs/: database.yaml  message_broker.yaml  message_bus.yaml  slave_database.yaml
Midterm/master/: master.py
Midterm/report/: report.tex
Midterm/slave/: slave.py
Midterm/tests/: conftest.py  test_ddl.py  test_dml.py
Midterm/utils/: configuration.py
Prac2/: 02.rpc.file.transfer.tex
Prac2/client/: client.py
Prac2/server/: server.py
Prac4/: word_count.py
prac1/: 01.tcp.file.transfer.tex
prac1/client/: client.py
prac1/server/: server.py
prac3/: mpi.py
