[tool.poetry]
name = "midterm"
version = "0.1.0"
description = ""
authors = ["Kwang1402 <hongquang2k4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
redis = "^5.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
