[tool.poetry]
name = "midterm"
version = "0.1.0"
description = ""
authors = ["Kwang1402 <hongquang2k4@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
redis = "^5.2.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"
mysql-replication = "^1.0.9"
pytest = "^8.3.4"
icecream = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
